socket connection, bags fixed

--- a/client/src/app/styles/theme.scss
+++ b/client/src/app/styles/theme.scss
@@ -9,6 +9,8 @@
   --shared-bg: #F0F2F7;
   --btn-bg: #0969DA;
   --theme-select-item: #0969DA;
+  --opponent-message: #F0F2F7;
+  --receiver-message: #dae9f9;
   --green: #03A855;
   --red: #D83030;
   --corner: 8px 12px;
@@ -23,4 +25,6 @@
   --add-btn-bg: #0969DA;
   --shared-bg: #1c2026;
   --theme-select-item: #F0F2F7;
+  --opponent-message: #1c2026;
+  --receiver-message: #2b4f78;
 }
