--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -23,6 +23,14 @@
         flex-direction: column;
         gap: 2px;
       }
+
+      li {
+        color: inherit;
+      }
+
+      &Online {
+        color: var(--green);
+      }
     }
 
     &Options {
