add dropdown menu, fixed styles

--- a/client/src/shared/UI/message/message.module.scss
+++ b/client/src/shared/UI/message/message.module.scss
@@ -11,6 +11,7 @@
 .messageOpponent {
   border-radius: 12px 12px 12px 4px;
   background-color: var(--opponent-message);
+  margin-left: initial;
   margin-right: auto;
 }
 
