--- a/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  padding: 24px;
+  min-width: 500px;
 }
 
 .chatPopupHeader {
@@ -30,8 +32,27 @@
     color: var(--red);
   }
 }
-.chatPopupButtons{
+
+.chatPopupButtons {
   display: flex;
   justify-content: flex-end;
   gap: 12px;
+
+  > button {
+    padding: 12px 24px;
+
+    p {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 150%;
+    }
+  }
+
+  :nth-child(2) {
+    background-color: var(--red);
+
+    p {
+      color: var(--font-main-reversed);
+    }
+  }
 }
