--- a/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
@@ -10,6 +10,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  > button {
+    padding: 0;
+  }
 }
 
 .chatPopupNotice {
