--- a/client/src/shared/UI/hidden-labeled-input/HiddenLabaledInput.module.scss
+++ b/client/src/shared/UI/hidden-labeled-input/HiddenLabaledInput.module.scss
@@ -13,6 +13,7 @@
     position: absolute;
     top: 50%;
     right: 10px;
+    background-color: inherit;
     transform: translateY(-25%);
     z-index: 2;
   }
