--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -43,35 +43,35 @@
       }
     }
 
-    &OptionsPopup{
+    &OptionsPopup {
       top: 100%;
       right: 10px;
     }
 
-    &OptionsNote{
+    &OptionsNote {
       box-shadow: 0 15px 40px 0 rgba(22, 24, 29, 0.12);
       background: #fff;
       top: 100%;
       right: 50px;
       min-width: 350px;
 
-      > div{
+      > div {
         display: flex;
         flex-direction: column;
         gap: 16px;
         padding: 16px;
 
-        h3{
+        h3 {
           font-weight: 600;
           font-size: 16px;
           line-height: 150%;
         }
 
-        .noteTextarea{
+        .noteTextarea {
           height: 200px;
         }
 
-        :last-child{
+        :last-child {
           display: flex;
           justify-content: flex-end;
           align-items: center;
@@ -83,11 +83,14 @@
 
   &Body {
     padding: 20px 20px 0 20px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
     flex-grow: 1;
+    overflow-y: auto;
+
+    &Messages {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
   }
 
   &Control {
