--- a/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
+++ b/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
@@ -46,6 +46,10 @@
         line-height: 150%;
       }
 
+      .chatListItemRowOpponentMsg {
+        color: var(--grey-text);
+      }
+
       .chatListItemRowUnchecked {
         display: flex;
         justify-content: center;
@@ -71,6 +75,10 @@
   }
 }
 
-.chatListItemActive{
+.chatListItemPinned {
+  backdrop-filter: brightness(85%);
+}
+
+.chatListItemActive {
   background: var(--shared-bg);
 }
