--- a/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
+++ b/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
@@ -82,3 +82,15 @@
 .chatListItemActive {
   background: var(--shared-bg);
 }
+
+@media screen and (max-width: 500px) {
+  .chatListItem {
+    &Col {
+      div:nth-child(2) {
+        p {
+          max-width: 140px;
+        }
+      }
+    }
+  }
+}
