--- a/client/src/shared/UI/avatar/avatar.module.scss
+++ b/client/src/shared/UI/avatar/avatar.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  position: relative;
 
   &Indicator {
     position: absolute;
