--- a/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
@@ -60,3 +60,11 @@
     }
   }
 }
+
+@media screen and (max-width: 560px) {
+  .chatPopup {
+    padding: 16px;
+    gap: 12px;
+    min-width: 90%;
+  }
+}
