--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -85,6 +85,9 @@
   &Body {
     padding: 20px 20px 0 20px;
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     overflow-y: auto;
 
     &Messages {
@@ -119,6 +122,41 @@
     border-radius: var(--radius);
   }
 }
-.chatFrameAttachPopup{
+
+.chatFrameAttachPopup {
   bottom: 100px;
+}
+
+@media screen and (max-width: 650px) {
+  .chatFrame {
+    &Body {
+      padding: 10px 10px 0 10px;
+    }
+
+    &Control {
+      padding: 10px;
+    }
+  }
+  .chatFrameAttachPopup {
+    bottom: 80px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .chatFrame {
+    &Header {
+      &OptionsNote {
+        right: 0;
+        min-width: 300px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .chatFrame {
+    &Header {
+      padding: 10px;
+    }
+  }
 }
