--- a/client/src/widgets/chat/UI/chat.module.scss
+++ b/client/src/widgets/chat/UI/chat.module.scss
@@ -3,3 +3,15 @@
   height: 100%;
   gap: 1px;
 }
+
+.chatGroup {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  > :nth-child(2) {
+    position: absolute;
+    box-shadow: 0 12px 26px 0 rgba(0, 0, 0, 0.05), 0 47px 47px 0 rgba(0, 0, 0, 0.04);
+  }
+}
