--- a/client/src/widgets/settings/UI/settings.module.scss
+++ b/client/src/widgets/settings/UI/settings.module.scss
@@ -1,20 +1,46 @@
-.settings{
+.settings {
   background-color: var(--block-bg);
   padding: 24px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  border-radius: var(--radius);
+
+  > :last-child {
+    color: #FFFFFF;
+    background-color: var(--red);
+  }
 }
-.settingsRow{
+
+.settingsRow {
   display: flex;
   align-items: center;
   gap: 12px;
 }
+
 label {
   width: 100%;
 }
-.settingsCol{
+
+.settingsCol {
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  .settings {
+    gap: 10px;
+  }
+  .settingsRow {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .settings {
+    padding: 16px;
+  }
 }
