--- a/client/src/widgets/chat/UI/chat-list/chat-list.module.scss
+++ b/client/src/widgets/chat/UI/chat-list/chat-list.module.scss
@@ -43,9 +43,36 @@
   }
 }
 
+.center {
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+
+  > p {
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin-bottom: 10px;
+
+  > p {
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
 @media screen and (max-width: 650px) {
   .chatList {
     padding: 10px;
+    border-radius: 0 8px 8px 0;
   }
 }
 
