--- a/client/src/app/styles/app.module.scss
+++ b/client/src/app/styles/app.module.scss
@@ -2,14 +2,14 @@
   height: 100vh;
   overflow: auto;
   section {
-    height: 100%;
+    min-height: calc(100% - 70px);
     background-color: var(--section-bg);
     padding: 20px;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .app{
+  .app {
     > section {
       padding: 10px;
     }
