--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -87,8 +87,9 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    height: calc(100vh - 200px);
     overflow-y: auto;
+    gap: 12px;
 
     &Messages {
       display: flex;
