--- a/client/src/widgets/settings/UI/settings.module.scss
+++ b/client/src/widgets/settings/UI/settings.module.scss
@@ -44,6 +44,20 @@
       border-radius: 100px;
     }
   }
+
+  &Error {
+    padding: 8px;
+    background-color: var(--red);
+    border-radius: 5px;
+    max-width: 600px;
+    margin: 20px auto 0;
+
+    p {
+      text-align: center;
+      font-size: 16px;
+      color: #FFFFFF;
+    }
+  }
 }
 
 .settingsRow {
