--- a/client/src/widgets/chat/UI/chat-sidebar/chat-sidebar.module.scss
+++ b/client/src/widgets/chat/UI/chat-sidebar/chat-sidebar.module.scss
@@ -2,6 +2,7 @@
   background-color: var(--block-bg);
   min-width: 70px;
   padding: 20px 0;
+  border-radius: 8px 0 0 8px;
   gap: 20px;
   display: flex;
   flex-direction: column;
