--- a/client/src/widgets/chat/UI/chat.module.scss
+++ b/client/src/widgets/chat/UI/chat.module.scss
@@ -1,6 +1,7 @@
 .chat {
   display: flex;
   height: calc(100vh - 110px);
+  width: 100%;
   gap: 1px;
 }
 
@@ -13,5 +14,11 @@
   > :nth-child(2) {
     position: absolute;
     box-shadow: 0 12px 26px 0 rgba(0, 0, 0, 0.05), 0 47px 47px 0 rgba(0, 0, 0, 0.04);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .chat{
+    height: calc(100vh - 90px);
   }
 }
