--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -96,6 +96,10 @@
       flex-direction: column;
       gap: 4px;
     }
+
+    &::-webkit-scrollbar {
+      background-color: var(--block-bg) !important;
+    }
   }
 
   &Control {
