--- a/client/src/entities/chat-message/chat-message.module.scss
+++ b/client/src/entities/chat-message/chat-message.module.scss
@@ -21,3 +21,342 @@
     }
   }
 }
+
+.chatMessageMedia {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 0 !important;
+
+  .chatMessageMediaPopup {
+    margin: 100px;
+    > img {
+      width: 100%;
+      height: 100%;
+      min-height: 300px;
+      min-width: 300px;
+    }
+  }
+
+  .mediaBox {
+    .mediaBoxImg {
+      object-fit: cover;
+      border-radius: 8px;
+    }
+  }
+
+  .mediaBoxOne {
+    .mediaBoxImg {
+      width: 360px;
+      height: 360px;
+    }
+  }
+
+  .mediaBoxTwo {
+    display: flex;
+    gap: 4px;
+
+    .mediaBoxImg {
+      width: 256px;
+      height: 144px;
+    }
+  }
+
+  .mediaBoxThree {
+    display: grid;
+    grid-template-columns: 350px 180px;
+    grid-template-rows: 180px 180px;
+    gap: 4px;
+
+    > :first-child {
+      grid-column: span 1;
+      grid-row: span 2;
+    }
+
+    > :nth-child(2),
+    > :nth-child(3) {
+      grid-column: span 1;
+      grid-row: span 1;
+    }
+
+    .mediaBoxImg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .mediaBoxFour {
+    display: grid;
+    grid-template-columns: repeat(2, 256px);
+    grid-template-rows: repeat(2, 180px);
+    gap: 4px;
+
+    .mediaBoxImg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .mediaBoxFive {
+    display: grid;
+    grid-template-columns: repeat(6, 120px);
+    grid-template-rows: 1.5fr 1fr;
+    gap: 4px;
+
+    > :first-child,
+    > :nth-child(2) {
+      grid-column: span 3;
+      grid-row: span 1;
+    }
+
+    > :nth-child(3),
+    > :nth-child(4),
+    > :nth-child(5) {
+      grid-column: span 2;
+      grid-row: span 1;
+    }
+
+    .mediaBoxImg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .chatMessageInner {
+    width: 100%;
+    padding: 2px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .chatMessageText {
+    max-width: 100%;
+    white-space: break-spaces;
+    word-break: break-word;
+    word-wrap: break-word;
+  }
+
+  .chatMessageDate {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    margin-top: auto;
+    gap: 10px;
+
+    > p {
+      font-weight: 500;
+      font-size: 13px;
+      color: var(--grey-text);
+    }
+  }
+
+  .chatMessageDateMedia {
+    backdrop-filter: blur(40px);
+    border-radius: var(--radius);
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
+    padding: 4px 6px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    > p {
+      font-weight: 500;
+      font-size: 13px;
+      color: var(--grey-text);
+    }
+  }
+}
+
+@media screen and (max-width: 1430px) {
+  .chatMessageMedia {
+    .mediaBoxOne {
+      .mediaBoxImg {
+        width: 240px;
+        height: 240px;
+      }
+    }
+
+    .mediaBoxTwo {
+      .mediaBoxImg {
+        width: 200px;
+        height: 144px;
+      }
+    }
+
+    .mediaBoxThree {
+      grid-template-columns: 300px 150px;
+      grid-template-rows: 150px 150px;
+    }
+
+    .mediaBoxFour {
+      grid-template-columns: repeat(2, 220px);
+      grid-template-rows: repeat(2, 180px);
+    }
+
+    .mediaBoxFive {
+      grid-template-columns: repeat(6, 100px);
+      grid-template-rows: 1.5fr 1fr;
+    }
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .chatMessageMedia {
+    .mediaBoxFive {
+      grid-template-columns: repeat(6, 80px);
+      grid-template-rows: 1.5fr 1fr 1fr;
+
+      > :first-child {
+        grid-column: span 6;
+        grid-row: span 1;
+      }
+
+      > :nth-child(2),
+      > :nth-child(3),
+      > :nth-child(4),
+      > :nth-child(5) {
+        grid-column: span 3;
+        grid-row: span 1;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .chatMessageMedia {
+    .chatMessageMediaPopup {
+      margin: 10px;
+    }
+
+    .mediaBoxThree {
+      grid-template-columns: 250px 130px;
+      grid-template-rows: 130px 130px;
+    }
+
+    .mediaBoxFive {
+      grid-template-columns: repeat(4, 100px);
+      grid-template-rows: 1.5fr 1fr 1fr;
+
+      > :first-child {
+        grid-column: span 4;
+        grid-row: span 1;
+      }
+
+      > :nth-child(2),
+      > :nth-child(3),
+      > :nth-child(4),
+      > :nth-child(5) {
+        grid-column: span 2;
+        grid-row: span 1;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .chatMessageMedia {
+    .mediaBoxTwo {
+      .mediaBoxImg {
+        width: 160px;
+        height: 120px;
+      }
+    }
+
+    .mediaBoxThree {
+      grid-template-columns: 210px 110px;
+      grid-template-rows: 110px 110px;
+    }
+
+    .mediaBoxFour {
+      grid-template-columns: repeat(2, 180px);
+      grid-template-rows: repeat(2, 160px);
+    }
+
+    .mediaBoxFive {
+      grid-template-columns: repeat(4, 80px);
+      grid-template-rows: 1.5fr 1fr 1fr;
+    }
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .chatMessageMedia {
+    .mediaBoxOne {
+      .mediaBoxImg {
+        width: 200px;
+        height: 200px;
+      }
+    }
+
+    .mediaBoxTwo {
+      .mediaBoxImg {
+        width: 120px;
+        height: 100px;
+      }
+    }
+
+    .mediaBoxThree {
+      grid-template-columns: 160px 90px;
+      grid-template-rows: 90px 90px;
+    }
+
+    .mediaBoxFour {
+      grid-template-columns: repeat(2, 130px);
+      grid-template-rows: repeat(2, 120px);
+    }
+
+    .mediaBoxFive {
+      grid-template-columns: repeat(4, 60px);
+      grid-template-rows: 1.5fr 1fr 1fr;
+    }
+
+    .chatMessageDateMedia {
+      bottom: 16px;
+      right: 10px;
+      padding: 4px 6px;
+      gap: 6px;
+    }
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .chatMessageMedia {
+    .mediaBoxOne {
+      .mediaBoxImg {
+        width: 200px;
+        height: 200px;
+      }
+    }
+
+    .mediaBoxTwo {
+      .mediaBoxImg {
+        width: 120px;
+        height: 100px;
+      }
+    }
+
+    .mediaBoxThree {
+      grid-template-columns: 130px 100px;
+      grid-template-rows: 90px 90px;
+    }
+
+    .mediaBoxFour {
+      grid-template-columns: repeat(2, 110px);
+    }
+
+    .mediaBoxFive {
+      grid-template-columns: repeat(4, 60px);
+      grid-template-rows: 1.5fr 1fr 1fr;
+    }
+
+    .chatMessageDateMedia {
+      bottom: 16px;
+      right: 10px;
+      padding: 4px 6px;
+      gap: 6px;
+    }
+  }
+}
