--- a/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame.module.scss
@@ -97,9 +97,40 @@
       gap: 4px;
     }
 
+    &Typing {
+      gap: 6px !important;
+
+      &Dots {
+        display: inline-block;
+        vertical-align: middle;
+
+        > span {
+          display: inline-block;
+          width: 4px;
+          height: 4px;
+          border-radius: 50%;
+          background-color: var(--font-main);
+          margin-right: 4px;
+          animation: typingAnimation 1.5s infinite alternate;
+        }
+
+        > span:nth-child(2) {
+          animation-delay: 0.3s;
+        }
+
+        > span:nth-child(3) {
+          animation-delay: 0.6s;
+        }
+      }
+    }
+
     &::-webkit-scrollbar {
       background-color: var(--block-bg) !important;
     }
+  }
+
+  &ControlWrapper{
+
   }
 
   &Control {
@@ -110,6 +141,10 @@
     &Input {
       width: 100%;
     }
+  }
+
+  &ControlNoPaddings {
+    padding: 20px 8px 8px;
   }
 }
 
@@ -129,7 +164,30 @@
 }
 
 .chatFrameAttachPopup {
-  bottom: 100px;
+  bottom: 110px;
+}
+
+.chatFrameAttachPopupMedia{
+  bottom: 190px;
+}
+
+.chatFrameAttachPopupFile{
+
+}
+
+@keyframes typingAnimation {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(-5px);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -139,11 +197,21 @@
     }
 
     &Control {
+      width: 100%;
       padding: 10px;
     }
   }
   .chatFrameAttachPopup {
-    bottom: 80px;
+    bottom: 90px;
+  }
+  .chatFrameAttachPopupMedia{
+    bottom: 180px;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .chatFrameAttachPopupMedia{
+    bottom: 150px;
   }
 }
 
@@ -154,6 +222,12 @@
         right: 0;
         min-width: 300px;
       }
+    }
+
+
+
+    &ControlNoPaddings {
+      padding: 10px 8px 8px;
     }
   }
 }
