--- a/client/src/shared/UI/dropdown-menu/dropdown-menu.module.scss
+++ b/client/src/shared/UI/dropdown-menu/dropdown-menu.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   padding: 4px;
   border-radius: 8px;
+  background-color: var(--block-bg);
   box-shadow: 0 12px 26px 0 rgba(0, 0, 0, 0.05), 0 47px 47px 0 rgba(0, 0, 0, 0.04);
   min-width: 230px;
 
@@ -14,19 +15,19 @@
     background-color: var(--block-bg);
     border-radius: 5px;
 
-    p{
+    p {
       font-weight: 500;
       font-size: 16px;
       line-height: 150%;
       color: var(--font-main);
     }
 
-    &:hover{
+    &:hover {
       background-color: var(--section-bg);
     }
   }
 
-  &ItemActive{
+  &ItemActive {
     background-color: var(--section-bg);
   }
 }
