--- a/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
+++ b/client/src/widgets/chat/UI/chat-list/chat-list-item/chat-list-item.module.scss
@@ -73,6 +73,38 @@
     align-items: center;
     gap: 10px;
   }
+
+  .opponentTyping {
+    gap: 4px !important;
+    display: flex;
+
+    > p {
+      color: var(--font-main) !important;
+    }
+
+    &Dots {
+      display: inline-block;
+      vertical-align: middle;
+
+      > span {
+        display: inline-block;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background-color: var(--font-main);
+        margin-right: 2px;
+        animation: typingAnimation 1.5s infinite alternate;
+      }
+
+      > span:nth-child(2) {
+        animation-delay: 0.3s;
+      }
+
+      > span:nth-child(3) {
+        animation-delay: 0.6s;
+      }
+    }
+  }
 }
 
 .chatListItemPinned {
@@ -81,6 +113,21 @@
 
 .chatListItemActive {
   background: var(--shared-bg);
+}
+
+@keyframes typingAnimation {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(-5px);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 500px) {
