--- a/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
+++ b/client/src/widgets/chat/UI/chat-frame/chat-frame-popup.module.scss
@@ -61,10 +61,76 @@
   }
 }
 
+.chatPopupMedia {
+  overflow-y: auto;
+  max-height: 80vh;
+}
+
+.chatPopupMediaContent {
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  grid-auto-rows: 200px;
+  gap: 4px;
+
+  > div {
+    > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.chatPopupMediaActive {
+  margin: 100px;
+
+  > img {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    min-width: 300px;
+  }
+}
+
+.center {
+  height: 100%;
+  grid-column: 3 span;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  gap: 6px;
+
+  > p {
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .chatPopupMediaContent {
+    grid-template-columns: repeat(3, 200px);
+  }
+  .chatPopupMediaActive {
+    margin: 10px;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .chatPopupMediaContent {
+    grid-template-columns: repeat(3, 150px);
+    grid-auto-rows: 150px;
+  }
+}
+
 @media screen and (max-width: 560px) {
   .chatPopup {
     padding: 16px;
     gap: 12px;
     min-width: 90%;
+  }
+
+  .chatPopupMediaContent {
+    grid-template-columns: repeat(2, 50%);
+    grid-auto-rows: 150px;
   }
 }
